<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BLUE"
    android:gravity="center"
    tools:context="com.simbiosyscorp.tutorials.eventsandlisteners.RadioGroups">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:text="@string/ChoiceText" />

    <RadioGroup
        android:id="@+id/myRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:background="#82B1FF"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:checkedButton="@+id/sound">

        <RadioButton
            android:id="@+id/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Android" />

        <RadioButton
            android:id="@+id/ios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iOS" />

        <RadioButton
            android:id="@+id/blackberry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BlackBerry" />

    </RadioGroup>

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/myRadioGroup"
        style="@style/button_text"
        android:text="@string/Choose" />
</RelativeLayout>
