<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BLUE"
    android:paddingLeft="80dp"
    android:paddingRight="80dp"
    tools:context=".Button">

    <Button
        android:id="@+id/button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:onClick="buttonFn"
        android:text="@string/btn_click_1" />

    <Button
        android:id="@+id/button1"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/btn_click_2" />

    <Button
        android:id="@+id/button2"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/btn_click_3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:onClick="next"
        android:text="Next" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="50dp"
        android:text="Button Clicks" />

</RelativeLayout>
